<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/name_schedule_tv"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/btnshape"
            android:padding="15dp"
            android:text="@string/Choose_date"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/textviewshape"
            android:gravity="center"
            android:inputType="date"
            android:padding="15dp"
            android:text="@string/date_format"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/btnshape"
            android:padding="15dp"
            android:text="@string/Select_Time"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textAllCaps="false" />


        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/textviewshape"
            android:inputType="time"
            android:padding="15dp"
            android:text="@string/time_format"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/btnshape"
        android:gravity="center"
        android:padding="13dp"
        android:text="@string/calendar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAllCaps="false"/>

</LinearLayout>