<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:padding="10dp"
        android:background="@color/white"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/name_contact_tv"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="start"
                android:padding="10dp"
                android:background="@color/white"
                android:text="@string/Opening_Hours"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="start"
                android:inputType="date"
                android:background="@color/white"
                android:padding="10dp"
                android:text="@string/Opening1"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="start"
                android:background="@color/white"
                android:inputType="date"
                android:padding="10dp"
                android:text="@string/Opening2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/save_phone"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:background="@drawable/btnshape"
                android:id="@+id/btn_keep"
                android:textAllCaps="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_waze"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:background="@drawable/btnshape"
                    android:gravity="center"
                    android:text="@string/Go_us"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Call_us"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:padding="20dp"
                    android:background="@drawable/btnshape"
                    android:id="@+id/btn_call"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>