<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:padding="10dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/name_complain_tv"/>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Subject"
                android:padding="10dp"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:backgroundTint="@android:color/holo_red_dark"
                android:id="@+id/subject_et"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:hint="@string/Insert_text"
                android:padding="10dp"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@color/black"
                android:id="@+id/text_et" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Add_photo"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:id="@+id/Addphoto_btn"
                    android:textAllCaps="false"
                    android:background="@drawable/btnshape"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Take_picture"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:id="@+id/takepic_btn"
                    android:textAllCaps="false"
                    android:background="@drawable/btnshape"/>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/image_iv"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:layout_margin="10dp" />
            </ScrollView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/Send"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:id="@+id/send_btn"
        android:textAllCaps="false"
        android:background="@drawable/btnshape"/>

</LinearLayout>