<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:textSize="20sp"
        android:padding="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:id="@+id/name_menu_tv"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_menu_tv">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:background="@drawable/btnshape"
                android:id="@+id/products_btn"
                android:text="@string/Our_products"
                android:textColor="@color/black"
                android:textAllCaps="false" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:background="@drawable/btnshape"
                android:id="@+id/contact_btn"
                android:text="@string/Contact_us"
                android:textColor="@color/black"
                android:textAllCaps="false" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:background="@drawable/btnshape"
                android:id="@+id/meeting_btn"
                android:text="@string/Schedule_meeting"
                android:textColor="@color/black"
                android:textAllCaps="false" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:background="@drawable/btnshape"
                android:id="@+id/complain_btn"
                android:text="@string/Enter_complain"
                android:textColor="@color/black"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>